updated radio names and removed unnecessary comments

--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -7,32 +7,26 @@ echo "----------------"
     alias blipon "play sounds\ui\panorama\round_report_odds_up_01.vsnd"
     alias +blipon "snd_toolvolume 0.1; blipon"
     alias -blipon ""
-    //BOUND TO MOUSE 1	
 
     alias blipoff "play sounds\ui\panorama\round_report_odds_dn_01.vsnd"
     alias +blipoff "snd_toolvolume 0.1; blipoff"
     alias -blipoff ""
-    //BOUND TO G
 	
     alias geiger1 "play sounds\player\geiger1.vsnd"
 	alias +geiger1 "snd_toolvolume 0.1; geiger1"
     alias -geiger1 ""
-    //BOUND TO E
 
     alias geiger2 "play sounds\player\geiger2.vsnd"
 	alias +geiger2 "snd_toolvolume 0.1; geiger2"
     alias -geiger2 ""
-    //BOUND TO SLOTS 1-5
 
     alias popup "play sounds\training\popup.vsnd"
     alias +popup "snd_toolvolume 0.005; popup"
     alias -popup ""
-    //BOUND TO CTRL
 
     alias lighton "play sounds\training\light_on.vsnd"
     alias +lighton "snd_toolvolume 0.02; lighton"
     alias -lighton ""
-    //BOUND TO TAB
 
     alias zoomout3 "play sounds\weapons\weapon_zoom_out_03.vsnd"
 	alias +zoomout3 "snd_toolvolume 0.5; zoomout3"
@@ -44,14 +38,11 @@ echo "----------------"
     alias playertag1 "play sounds\physics\metal\playertag_pickup_01.vsnd"
 	alias +playertag1 "snd_toolvolume 0.02; playertag1"
     alias -playertag1 ""
-    //BOUND TO F
 	
     alias chain1 "play sounds\physics\metal\chain_impact_hard1.vsnd"
     alias +chain1 "snd_toolvolume 0.02; chain1"
     alias -chain1 ""
-    //BOUND TO Q
 
-    //UNUSED SOUNDS
     alias bell "play sounds\training\timer_bell.vsnd"
     alias +bell "snd_toolvolume 0.02; bell"
     alias -bell ""
@@ -113,7 +104,7 @@ bind "z" "slot8;+geiger2" //Smoke
 bind "x" "slot6;+geiger2" //HE
 bind "v" "slot10;+geiger2" //Molotov
 
-bind "p" "exec radio/crosshair.cfg";
+bind "p" "exec radio/ban.cfg";
 
 
 // Toggle Radar
