--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,4 +1,4 @@
-zecho "----------------"
+echo "----------------"
 echo "--- Autoexec ---"
 echo "----------------"
 
@@ -73,59 +73,79 @@ echo "----------------"
     alias shutter7 "play sounds\ambient\misc\shutter7.vsnd"
     alias +shutter7 "snd_toolvolume 0.05; shutter7"
     alias -shutter7 ""
+
+// GENERAL
+sensitivity 0.9;
+volume 0.6;
+r_fullscreen_gamma 1.5;
+
+// VIEWMODEL
+viewmodel_fov 68;
+viewmodel_offset_x 2.5;
+viewmodel_offset_y 0;
+viewmodel_offset_z -1.5;
+viewmodel_presetpos 2;
 	
 // MOUSE
-bind "mouse1" "+attack;"
-bind "mouse2" "+attack2;"
-bind "space" "+jump"
-bind "mwheeldown" "+jump"
+bind "mouse1" "+attack;";
+bind "mouse2" "+attack2;";
+bind "space" "+jump";
+bind "mwheeldown" "+jump";
 
 // KEYBOARD
 bind "w" "+forward";
 bind "s" "+back";
 bind "a" "+left";
-bind "d" "+right"
-bind "ctrl" "+duck;";
-bind "shift" "+sprint;"
-bind "e" "+use;+geiger1"
-bind "f" "+lookatweapon;geiger1"
-bind "g" "drop;+blipoff"
+bind "d" "+right";
+bind "ctrl" "+duck";
+bind "shift" "+sprint";
+bind "e" "+use; +geiger1";
+bind "f" "+lookatweapon; geiger1";
+bind "g" "drop; +blipoff";
 
-bind "tab" "+_scoregraph;"
-alias "+_scoregraph" "+showscores;cl_hud_telemetry_frametime_show 2;cl_hud_telemetry_net_misdelivery_show 2;cl_hud_telemetry_ping_show 2"
-alias "-_scoregraph" "-showscores;cl_hud_telemetry_frametime_show 0;cl_hud_telemetry_net_misdelivery_show 0;cl_hud_telemetry_ping_show 0"
+bind "tab" "+_scoregraph;";
+alias "+_scoregraph" "+showscores; cl_hud_telemetry_frametime_show 2; cl_hud_telemetry_net_misdelivery_show 2; cl_hud_telemetry_ping_show 2";
+alias "-_scoregraph" "-showscores; cl_hud_telemetry_frametime_show 0; cl_hud_telemetry_net_misdelivery_show 0; cl_hud_telemetry_ping_show 0";
 
+bind "1" "slot1; +geiger2";
+bind "2" "slot2; +geiger2";
+bind "3" "slot3; +geiger2";
+bind "c" "slot7; +geiger2"; //Flash
+bind "z" "slot8; +geiger2"; //Smoke
+bind "x" "slot6; +geiger2"; //HE
+bind "v" "slot10; +geiger2"; //Molotov
 
-bind "1" "slot1;+geiger2"
-bind "2" "slot2;+geiger2"
-bind "3" "slot3;+geiger2"
-bind "c" "slot7;+geiger2" //Flash
-bind "z" "slot8;+geiger2" //Smoke
-bind "x" "slot6;+geiger2" //HE
-bind "v" "slot10;+geiger2" //Molotov
-
+// RADIO
 bind "p" "exec radio/ban.cfg";
 
+bind "capslock" "toggle cl_radar_scale 0.3 1";
 
-// Toggle Radar
-bind "capslock" "toggle cl_radar_scale 0.3 1;"
-
+//MISC
 // Noclip with mouse4
 // bind "mouse4" noclip;
 
 // Rethrow last grenade with mouse5
-bind "mouse4" sv_rethrow_last_grenade;
+// bind "mouse4" sv_rethrow_last_grenade;
 
 // Follow Recoil on +attack
-//alias +recoil "+attack; cl_crosshair_recoil true";
-//alias -recoil "-attack; cl_crosshair_recoil false";
-//bind mouse1 +recoil;
+// alias +recoil "+attack; cl_crosshair_recoil true";
+// alias -recoil "-attack; cl_crosshair_recoil false";
+// bind mouse1 +recoil;
 
-// Crosshair Changes
-bind "del" "exec crosshairs/cross_1.cfg"
+// CROSSHAIRS
+cl_crosshair_recoil false;
 
-bind "end" "exec crosshairs/cross_2.cfg"
+// Default crosshair
+exec "crosshairs/cross_4.cfg";
 
-bind "pgup" "exec crosshairs/cross_3.cfg"
+// Follow Recoil on n
+alias recoil_toggle "recoil_1";
+alias recoil_1 "cl_crosshair_recoil true; cl_crosshaircolor 0; alias recoil_toggle recoil_2";
+alias recoil_2 "cl_crosshair_recoil false; cur_color; alias recoil_toggle recoil_1";
+bind "n" "recoil_toggle";
 
-bind "pgdn" "exec crosshairs/cross_4.cfg"
+cl_crosshair_sniper_width 1
+bind "del" "exec crosshairs/cross_1.cfg";
+bind "end" "exec crosshairs/cross_2.cfg";
+bind "pgup" "exec crosshairs/cross_3.cfg";
+bind "pgdn" "exec crosshairs/cross_4.cfg";
