--- a/crosshairs/cross_1.cfg
+++ b/crosshairs/cross_1.cfg
@@ -20,3 +20,4 @@ cl_crosshairusealpha "1"
 cl_crosshair_t "0"
 cl_crosshairstyle "4"
 cl_crosshairsize "2"
+alias cur_color "cl_crosshaircolor_r 255; cl_crosshaircolor_g 255; cl_crosshaircolor_b 255; cl_crosshaircolor 2;"
