--- a/crosshairs/cross_2.cfg
+++ b/crosshairs/cross_2.cfg
@@ -19,4 +19,5 @@ cl_crosshairgap_useweaponvalue "0"
 cl_crosshairusealpha "1"
 cl_crosshair_t "0"
 cl_crosshairstyle "4"
-cl_crosshairsize "1.2"
+cl_crosshairsize "1.0"
+alias cur_color "cl_crosshaircolor_r 255; cl_crosshaircolor_g 0; cl_crosshaircolor_b 255; cl_crosshaircolor 5;"
